force-app/main/default/objects/Program__c/fields/DisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>DisplayLabel__c</fullName>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>