force-app/main/default/objects/Program__c/fields/RegionId__c.field-meta.xml
<CustomField>
    <fullName>RegionId__c</fullName>
    <label>Region ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>