force-app/main/default/objects/Program__c/fields/ServiceGroupId__c.field-meta.xml
<CustomField>
    <fullName>ServiceGroupId__c</fullName>
    <label>Service Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>